1. Added content for 1st edition 2. Updated About section 3. Added speaker section with info 4. Modified the color scheme to orange

--- a/assets/css/app.sass
+++ b/assets/css/app.sass
@@ -64,7 +64,7 @@
       span
         font-weight: normal
         display: inline-block
-        color: $blue
+        color: $orange
 
 //
 // INTRO SECTION
@@ -72,7 +72,7 @@
 #intro
   $main-fg: $dark
   $main-bg: $white
-  $alt-fg: $blue
+  $alt-fg: $orange
   +override-colors($main-fg,$main-bg,$alt-fg)
   border-radius: 0
 
@@ -192,7 +192,7 @@
 //
 #agenda
   $main-fg: $dark
-  $main-bg: $blue
+  $main-bg: $orange
   $alt-fg: $white
   +override-colors($main-fg,$main-bg,$alt-fg)
 
@@ -272,7 +272,7 @@
       display: block
       padding-bottom: .5em
     a
-      color: $blue
+      color: $orange
 
   @media #{$small}
     .address p
@@ -286,7 +286,7 @@
 #about
   $main-fg: $white
   $main-bg: $dark
-  $alt-fg: $blue
+  $alt-fg: $orange
   +override-colors($main-fg,$main-bg,$alt-fg)
   background-image: url(../img/dark-bg.jpg)
 
@@ -347,7 +347,7 @@
 #archive
   $main-fg: $dark
   $main-bg: $white
-  $alt-fg: $blue
+  $alt-fg: $orange
   +override-colors($main-fg,$main-bg,$alt-fg)
 
   .grid
@@ -405,7 +405,7 @@
 #footer
   $main-fg: darken($topbar-bg-color, 30%)
   $main-bg: $topbar-bg-color
-  $alt-fg: lighten($blue, 15%)
+  $alt-fg: lighten($orange, 15%)
   +override-colors($main-fg,$main-bg,$alt-fg)
 
   border-radius: 0
