--- a/layouts/default.html.erb
+++ b/layouts/default.html.erb
@@ -8,7 +8,7 @@
                 </a>
                 <h1>Converge Chennai</h1>
 
-                <h6>an open forum for geeks to connect, discuss &amp; learn latest ideas, technologies and trends in software development</h6>
+                <h6>Converge aims to bring together ideators, designers, business analysts, solution providers, technologists, product managers and project and program managers to connect, collaborate and learn from each other.</h6>
 
                 <% if @item[:subheader] %>
                     <h5 class="subheader"><%= @item[:subheader] %></h5>
@@ -105,6 +105,8 @@
     <%= render '_about_section' %>
 
     <%= render '_agenda_section' %>
+
+    <%= render '_speaker_section' %>
 
     <%= render '_location_section' %>
 
