--- a/layouts/_about_section.html.erb
+++ b/layouts/_about_section.html.erb
@@ -2,9 +2,7 @@
   <div class="row"
        data-bottom="transform:translateY(-5em)" data--100-bottom="transform:translateY(0)">
     <div class="large-12 columns social">
-      <a rel="nofollow" href="https://www.facebook.com/GeeknightChennai?viewer_id=100006569229519" target="_blank" title="Like us on FaceBook" onclick="ga('send', 'event', 'social', 'like')"><i class="icon-like"></i></a>
-      <a rel="nofollow" href="https://www.facebook.com/groups/chennaigeeks/" target="_blank"><i class="icon-facebook-2" title="FaceBook discussion group" onclick="ga('send', 'event', 'social', 'facebook')"></i></a>
-      <a rel="nofollow" href="https://twitter.com/intent/tweet?url=twchennai.github.io/geeknight&text=Whats+up&hashtags=geeknightchennai" target="_blank" title="Tweet hashtag #geeknightchennai" onclick="ga('send', 'event', 'social', 'twitter')"><i class="icon-twitter-2"></i></a>
+      <a rel="nofollow" href="https://www.linkedin.com/grp/home?gid=6748221" target="_blank" title="LinkedIn Group" onclick="ga('send', 'event', 'social', 'linked-in')"><i class="icon-linkedin"></i></a>
       <a rel="nofollow" href="mailto: converge-chennai@thoughtworks.com" title="Email us" onclick="ga('send', 'event', 'social', 'email')"><i class="icon-mail"></i></a>
       <!-- NOTE: Last video link is line-wrapping in small screens like iOS a rel="nofollow" href="#" title="Videos (coming soon)"><i class="icon-youtube"></i></a -->
     </div>
