--- a/layouts/default.html.erb
+++ b/layouts/default.html.erb
@@ -1,7 +1,7 @@
 <% render '_layout', title: start_date.strftime("%b %Y") do %>
     <section id="intro" class="feature">
         <div class="row logo">
-            <div class="large-12 columns">
+            <div id="intro-desc" class="large-12 columns">
                 <a href="http://www.thoughtworks.com" target="_blank"
                    onclick="ga('send', 'event', 'tw', 'tw')" class="tw-logo">
                     <img src="./img/tw-logo.png" alt="ThoughtWorks" align="center" />
@@ -54,25 +54,10 @@
                        onclick="ga('send', 'event', 'participate', 'participate')">
                         <h4>Participate</h4>
                     </a>
-                    <p>
-                        to learn exciting new stuff <br />
-                        <small>(and to connect with fellow geeks)</small>
-                    </p>
                 <% else %>
                     <a href="javascript:void(0)">
                         <h4><strike>Participate</strike></h4>
                     </a>
-                    <% if start_date.future? %>
-                        <p>
-                            registrations not yet open <br />
-                            <small>(please check out in a few days)</small>
-                        </p>
-                    <% else %>
-                        <p>
-                            registrations closed <br />
-                            <small>(sorry, but check out next geek night)</small>
-                        </p>
-                    <% end %>
                 <% end %>
             </div>
             <div class="large-2 columns participate-or-talk">
@@ -85,18 +70,10 @@
                        onclick="ga('send', 'event', 'talk', 'talk')">
                         <h4>Present</h4>
                     </a>
-                    <p>
-                        to share exciting new stuff <br />
-                        <small>(accepted for this and subsequent geek nights)</small>
-                    </p>
                 <% else %>
                     <a href="javascript:void(0)">
                         <h4><strike>Present</strike></h4>
                     </a>
-                    <p>
-                        presentations not yet open <br />
-                        <small>(please check out in a few days)</small>
-                    </p>
                 <% end %>
             </div>
         </div>
