--- a/layouts/archive.html.erb
+++ b/layouts/archive.html.erb
@@ -19,6 +19,8 @@
         </div>
     </section>
 
+    <%= render '_header_section' %>
+
     <%= render '_about_section' %>
 
     <%= render '_agenda_section' %>
