changed agenda and speakers info for aug 8 edition

--- a/layouts/default.html.erb
+++ b/layouts/default.html.erb
@@ -81,6 +81,10 @@
 
     <%= render '_about_section' %>
 
+    <%= render '_agenda_section' %>
+
+    <%= render '_speaker_section' %>
+
     <%= render '_location_section' %>
 
     <%= render '_archive_section' %>
