[DD/Kandan] Added speakers image

--- a/assets/css/app.sass
+++ b/assets/css/app.sass
@@ -285,6 +285,12 @@
   .speaker-description
     text-align: left
     margin-top: .4em
+  .speaker-image
+    height: 50px
+    width: 50px
+    position: relative
+    display: inline-block
+    float: left
 
 //
 // LOCATION SECTION
