--- a/layouts/_speaker_section.html.erb
+++ b/layouts/_speaker_section.html.erb
@@ -6,7 +6,8 @@
     <% [:left, :right].each do |align| %>
       <div class="large-5 large-1-offset columns">
         <% @item[:speaker][align] && @item[:speaker][align].each_with_index do |speaker, i| %>
-          <div class="row">
+          <div class="row" height="100" weight="100">
+            <div class="speaker-image"><img src="./img/speaker/<%=speaker[:speaker_image]%>" title=<%=speaker[:name]%> alt=<%=speaker[:name]%> width=100% height="auto"></div>
             <div class="speaker-name"><%= speaker[:name] %></div>
             <% if speaker[:designation] %>
               <div class="speaker-designation"><%= speaker[:designation] %></div>
