[DD] made some changes

--- a/assets/css/app.sass
+++ b/assets/css/app.sass
@@ -173,6 +173,7 @@
 
     .participate
       +animate(rotateInUpLeft, 1s, 1.5s)
+      margin-left: 30%
 
     .talk
       +animate(rotateInUpRight, 1s, 1.5s)
