--- a/layouts/_speaker_section.html.erb
+++ b/layouts/_speaker_section.html.erb
@@ -7,7 +7,9 @@
       <div class="large-5 large-1-offset columns">
         <% @item[:speaker][align] && @item[:speaker][align].each_with_index do |speaker, i| %>
           <div class="row" height="100" weight="100">
-            <div class="speaker-image"><img src="./img/speaker/<%=speaker[:speaker_image]%>" title=<%=speaker[:name]%> alt=<%=speaker[:name]%> width=100% height="auto"></div>
+            <% if speaker[:speaker_image] %>
+              <div class="speaker-image"><img src="./img/speaker/<%=speaker[:speaker_image]%>" title=<%=speaker[:name]%> alt=<%=speaker[:name]%> width=100% height="auto"></div>
+            <% end%>
             <div class="speaker-name"><%= speaker[:name] %></div>
             <% if speaker[:designation] %>
               <div class="speaker-designation"><%= speaker[:designation] %></div>
