--- a/assets/css/app.sass
+++ b/assets/css/app.sass
@@ -278,11 +278,13 @@
   .speaker-name
     text-align: left
     font-weight: 400
+    margin-left: 65px
   .speaker-designation
     text-align: left
     font-size: .5em
     font-style: italic
     margin-top: .2em
+    margin-left: 65px
   .speaker-description
     text-align: left
     margin-top: .4em
