--- a/assets/css/app.sass
+++ b/assets/css/app.sass
@@ -279,6 +279,8 @@
     text-align: left
     font-weight: 400
     margin-left: 65px
+    a
+      color: $orange
   .speaker-designation
     text-align: left
     font-size: .5em
@@ -294,6 +296,10 @@
     position: relative
     display: inline-block
     float: left
+    img
+      border-radius: 50px
+      height: 50px
+      width: 50px
 
 //
 // LOCATION SECTION
