--- a/layouts/_about_section.html.erb
+++ b/layouts/_about_section.html.erb
@@ -12,5 +12,12 @@
     <div class="large-12 columns" data-anchor-target="#_about">
       <%= @item[:about] %>
     </div>
+    <div class="large-12 columns">
+      <div class="fb-share-button" data-href="http://twchennai.github.io/converge/" data-layout="button_count"></div>
+      <a href="https://twitter.com/share" class="twitter-share-button" data-url="http://twchennai.github.io/converge/" data-text="Check out">Tweet</a>
+      <script>
+        !function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');
+      </script>
+    </div>
   </div>
 </section>
