--- a/layouts/_location_section.html.erb
+++ b/layouts/_location_section.html.erb
@@ -6,17 +6,18 @@
     <div class="row">
         <div class="large-4 columns address" data--100-bottom-top="transform:translateX(-100%)" data--100-bottom="transform:translateX(0)">
             <p>
+
                 <span>ThoughtWorks Technologies Pvt Ltd</span>
-                <span>9th Floor, Phase 3</span>
-                <span>Ascendas Tech Park</span>
-                <span>Taramani, Chennai</span>
-                <span><small><a href="https://maps.google.com/maps?f=q&source=s_q&hl=en&geocode=&q=thoughtworks+chennai&aq=&sll=37.0625,-95.677068&sspn=61.153041,114.169922&vpsrc=0&ie=UTF8&hq=thoughtworks&hnear=Chennai,+Tamil+Nadu,+India&t=m&z=13&iwloc=A&cid=1639595661799347847" target="_blank" rel="nofollow">&laquo; Open in Google Maps &raquo;</a></small></span>
+                <span>3rd Floor, Apurupa Silpi, Beside H.P. Petrol Bunk, KFC Building</span>
+                <span>Rajiv gandhi Nagar, Gachibowli</span>
+                <span>Hyderabad, Telangana 500032</span>
+                <span><small><a href="https://www.google.co.in/maps/place/ThoughtWorks/@17.4430113,78.3552378,17z/data=!3m1!4b1!4m5!3m4!1s0x3bcb9395ed638f61:0x49acd498fc2f1237!8m2!3d17.4430113!4d78.3574265" target="_blank" rel="nofollow">&laquo; Open in Google Maps &raquo;</a></small></span>
             </p>
         </div>
 
         <div class="large-8 columns map" data-anchor-target=".address" data--100-bottom-top="transform:translateX(100%)" data--100-bottom="transform:translateX(0)">
-            <a href="https://maps.google.com/maps?f=q&source=s_q&hl=en&geocode=&q=thoughtworks+chennai&aq=&sll=37.0625,-95.677068&sspn=61.153041,114.169922&vpsrc=0&ie=UTF8&hq=thoughtworks&hnear=Chennai,+Tamil+Nadu,+India&t=m&z=13&iwloc=A&cid=1639595661799347847" target="_blank" rel="nofollow">
-                <img src="./img/map.png" alt="Map" align="center" />
+            <a href="https://www.google.com/maps/place/ThoughtWorks/@17.4430113,78.3552378,17z/data=!3m1!4b1!4m5!3m4!1s0x3bcb9395ed638f61:0x49acd498fc2f1237!8m2!3d17.4430113!4d78.3574265?hl=en" target="_blank" rel="nofollow">
+                <img src="./img/office_map.png" alt="Map" align="center" />
             </a>
         </div>
     </div>
