--- a/layouts/archive.html.erb
+++ b/layouts/archive.html.erb
@@ -6,7 +6,7 @@
                    onclick="ga('send', 'event', 'tw', 'tw')">
                     <img src="./img/tw-logo.png" alt="ThoughtWorks" align="center" />
                 </a>
-                <h1>Converge Chennai</h1>
+                <h1>Converge Hyderabad</h1>
                 <h5>Flashback</h5>
             </div>
         </div>
