--- a/layouts/default.html.erb
+++ b/layouts/default.html.erb
@@ -6,7 +6,7 @@
                    onclick="ga('send', 'event', 'tw', 'tw')" class="tw-logo">
                     <img src="./img/tw-logo.png" alt="ThoughtWorks" align="center" />
                 </a>
-                <h1>Converge Chennai</h1>
+                <h1>Converge Hyderabad</h1>
 
                 <h6>Converge aims to bring together ideators, designers, business analysts, solution providers, technologists, product managers and project and program managers to connect, collaborate and learn from each other.</h6>
 
