--- a/layouts/_about_section.html.erb
+++ b/layouts/_about_section.html.erb
@@ -3,7 +3,8 @@
        data-bottom="transform:translateY(-5em)" data--100-bottom="transform:translateY(0)">
     <div class="large-12 columns social">
       <a rel="nofollow" href="https://www.linkedin.com/grp/home?gid=6748221" target="_blank" title="LinkedIn Group" onclick="ga('send', 'event', 'social', 'linked-in')"><i class="icon-linkedin"></i></a>
-      <a rel="nofollow" href="mailto:converge-chennai@thoughtworks.com" title="Email us" onclick="ga('send', 'event', 'social', 'email')"><i class="icon-mail"></i></a>
+      <a rel="nofollow" href="mailto:converge-hyderabad@thoughtworks.com" title="Email us" onclick="ga('send', 'event', 'social', 'email')"><i class="icon-mail"></i></a>
+      <a rel="nofollow" href="https://www.facebook.com/Convergencr/?notif_t=page_admin&notif_id=1500622426320227" title="FB Group" onclick="ga('send', 'event', 'social', 'facebook')"><i class="icon-facebook-official"></i></a>
       <!-- NOTE: Last video link is line-wrapping in small screens like iOS a rel="nofollow" href="#" title="Videos (coming soon)"><i class="icon-youtube"></i></a -->
     </div>
   </div>
@@ -13,8 +14,8 @@
       <%= @item[:about] %>
     </div>
     <div class="large-12 columns">
-      <div class="fb-share-button" data-href="http://twchennai.github.io/converge/" data-layout="button_count"></div>
-      <a href="https://twitter.com/share" class="twitter-share-button" data-url="http://twchennai.github.io/converge/" data-text="Check out">Tweet</a>
+      <div class="fb-share-button" data-href="https://twhyderabad.github.io/converge/" data-layout="button_count"></div>
+      <a href="https://twitter.com/share" class="twitter-share-button" data-url="https://twhyderabad.github.io/converge/" data-text="Check out">Tweet</a>
       <script>
         !function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');
       </script>
