[Anil:Murali] changed image style and link to open in new tab

--- a/layouts/_speaker_section.html.erb
+++ b/layouts/_speaker_section.html.erb
@@ -12,7 +12,7 @@
             <% end%>
             <div class="speaker-name">
               <% if speaker[:link] %>
-                <a href="<%=speaker[:link]%>">
+                <a href="<%=speaker[:link]%>" target="_blank" rel="noreferrer noopener">
                   <%= speaker[:name] %>
                 </a>
               <% else %>
