--- a/assets/css/app.sass
+++ b/assets/css/app.sass
@@ -123,6 +123,7 @@
 
     h4
       color: $alt-fg
+      text-transform: capitalize
     p
       color: #fff
 
@@ -285,21 +286,21 @@
     text-align: left
     font-size: .5em
     font-style: italic
-    margin-top: .2em
+    margin-top: 1em
     margin-left: 65px
   .speaker-description
     text-align: left
     margin-top: .4em
   .speaker-image
-    height: 50px
-    width: 50px
+    padding: 0 10px 10px 0
+    height: 150px
+    width: 150px
     position: relative
     display: inline-block
     float: left
     img
-      border-radius: 50px
-      height: 50px
-      width: 50px
+      height: 150px
+      width: 150px
 
 //
 // LOCATION SECTION
