--- a/layouts/_about_section.html.erb
+++ b/layouts/_about_section.html.erb
@@ -3,8 +3,8 @@
        data-bottom="transform:translateY(-5em)" data--100-bottom="transform:translateY(0)">
     <div class="large-12 columns social">
       <a rel="nofollow" href="https://www.linkedin.com/grp/home?gid=6748221" target="_blank" title="LinkedIn Group" onclick="ga('send', 'event', 'social', 'linked-in')"><i class="icon-linkedin"></i></a>
-      <a rel="nofollow" href="mailto:converge-hyderabad@thoughtworks.com" title="Email us" onclick="ga('send', 'event', 'social', 'email')"><i class="icon-mail"></i></a>
-      <a rel="nofollow" href="https://www.facebook.com/Convergencr/?notif_t=page_admin&notif_id=1500622426320227" title="FB Group" onclick="ga('send', 'event', 'social', 'facebook')"><i class="icon-facebook-official"></i></a>
+      <a target="_blank" rel="nofollow" href="mailto:converge-hyderabad@thoughtworks.com" title="Email us" onclick="ga('send', 'event', 'social', 'email')"><i class="icon-mail"></i></a>
+      <a target="_blank" rel="nofollow" href="https://www.facebook.com/Convergencr/?notif_t=page_admin&notif_id=1500622426320227" title="FB Group" onclick="ga('send', 'event', 'social', 'facebook')"><i class="icon-facebook-official"></i></a>
       <!-- NOTE: Last video link is line-wrapping in small screens like iOS a rel="nofollow" href="#" title="Videos (coming soon)"><i class="icon-youtube"></i></a -->
     </div>
   </div>
