--- a/layouts/_location_section.html.erb
+++ b/layouts/_location_section.html.erb
@@ -7,7 +7,7 @@
         <div class="large-4 columns address" data--100-bottom-top="transform:translateX(-100%)" data--100-bottom="transform:translateX(0)">
             <p>
 
-                <span>ThoughtWorks Technologies Pvt Ltd</span>
+                <span>ThoughtWorks Technologies Pvt. Ltd.</span>
                 <span>3rd Floor, Apurupa Silpi, Beside H.P. Petrol Bunk, KFC Building</span>
                 <span>Rajiv gandhi Nagar, Gachibowli</span>
                 <span>Hyderabad, Telangana 500032</span>
